# skills

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: copilot-instructions.md
devops/aks-updater/: SKILL.md
devops/aks-updater/agents/: changelog-researcher.md
devops/aks-updater/assets/: plan_template.html  summary_template.html
devops/aks-updater/references/: aks-compatibility.md  breaking-change-keywords.md
devops/aks-updater/tools/: check_prereqs.py  generate_report.py  inventory_addons.py  inventory_helm.py
devops/aws-eks-updater/assets/: plan_template.html
devops/eks-updater/: SKILL.md
devops/eks-updater/assets/: summary_template.html
devops/eks-updater/references/: breaking-change-keywords.md  eks-compatibility.md
devops/eks-updater/tools/: generate_report.py
docs/: BEST_PRACTICES.md  CONTRIBUTING.md  GUIDE.md  INSTALL.md  investigation.md
mcp-server/: Dockerfile  README.md  _discovery.py  _registration.py  pyproject.toml  server.py
plugins/devops-core/: .mcp.json  README.md
plugins/devops-core/.claude-plugin/: plugin.json
plugins/devops-core/.codex-plugin/: plugin.json
plugins/devops-core/mcp-server/: README.md  server.py
plugins/devops-core/skills/: aws-eks-updater  azure-aks-updater
plugins/plugin-factory/: .mcp.json  README.md
plugins/plugin-factory/.claude-plugin/: plugin.json
plugins/plugin-manager/: .mcp.json  README.md
rules/: devops-agent-rules.md
skills/: README.md  manifest.json
skills/meta/plugin-factory/: SKILL.md
(+41 files in other folders)
