[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awesome-agent-toolkits-mcp-server"
version = "0.1.0"
description = "Auto-discovering MCP server for agent skills"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "PaperBackPear3" },
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Repository = "https://github.com/PaperBackPear3/awesome-agent-toolkits"

[project.scripts]
awesome-agent-toolkits-mcp-server = "server:main"

[tool.hatch.build.targets.wheel]
force-include = {"server.py" = "server.py"}
